fix border and align item

--- a/style-desktop.css
+++ b/style-desktop.css
@@ -19,6 +19,7 @@ header {
 }
 footer {
   background-color: #22aacc;
+  text-align: center;
 }
 .logo {
   width: 10%;
@@ -58,6 +59,7 @@ button {
   font-style: normal;
   margin-top: 1em;
   margin-bottom: 1em;
+  border: none;
 }
 .section1 {
   height: 50%;
@@ -101,20 +103,21 @@ button {
 
 .laptop-grid {
   display: inline-block;
+  padding: 1em;
 }
 .box4,
 .box5,
 .box6 {
   display: inline-block;
   border: 1px solid #dee1e3;
-  font-size: 0.8em;
-  padding: 2em;
-  margin: 3em;
+  font-size: 0.7em;
+  padding: 0;
+  margin: 2em;
   width: 20%;
 }
 
 .box7 {
-  padding: 1em;
+  padding: 1.2em;
   color: white;
   width: 50%;
   margin-left: auto;
@@ -127,9 +130,11 @@ button {
 .lista-contatti {
   display: inline-block;
   text-align: start;
+  padding-left: 7em;
 }
 hr {
   background-color: white;
+  text-align: center;
 }
 a {
   color: white;
@@ -139,4 +144,5 @@ a {
 .copyright {
   font-size: 0.8em;
   margin-bottom: 0.5em;
+  padding-left: 1.9em;
 }
